--- a/package.json
+++ b/package.json
@@ -14,38 +14,33 @@
     "generate-sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "fluid-player": "^3.50.0",
-    "framer-motion": "^12.5.0",
-    "lodash": "^4.17.21",
-    "plyr": "^3.7.8",
-    "plyr-react": "^5.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.3.0",
-    "react-player": "^2.16.0",
-    "react-router-dom": "^6.14.0",
-    "video.js": "^8.21.0"
+    "chart.js": "^4.4.9",
+    "framer-motion": "^12.15.0",
+    "papaparse": "^5.5.3",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.30.1",
+    "wordcloud2": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-import-attributes": "^7.26.0",
-    "@types/lodash": "^4.17.16",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-helmet": "^6.1.11",
+    "@babel/plugin-syntax-import-attributes": "^7.27.1",
+    "@types/node": "^22.15.24",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.20",
+    "@vitejs/plugin-react": "^4.5.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.0.2",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "uglify-js": "^3.18.0",
-    "vite": "^4.3.9"
+    "vite": "^6.3.5"
   }
 }
