--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-router",
-  "homepage": "https://subs4unlock.com",
+  "homepage": "https://agungdevlop.github.io/AnalisaSentimen/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
